fix extra spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@
 |  |  |  |  Html, Body
 ============================================ */
 
+
 html, body {
     height: 100%;
+    width: 100%;
 }
 
 body {
